examples/test/testpolicy15169.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15169
  namespace: namespace139
spec:
  podSelector:
    matchLabels:
      key46: value21
      key33: value4
      key18: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key16: value27
          key18: value36
      podSelector:
        matchLabels:
          key6: value44
          key9: value24
